corrected resizing bug and adjusted footer copy

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                         <strong>It all began about 15 years ago, with a middle-school foray into HTML.</strong> A hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown. Skip ahead a bit, and I decided to revisit these web development roots. After a few years in Boston, I moved to Durham, NC and enrolled in an intensive three-month <a href="http://theironyard.com/academy/rails-engineering/" target="_blank">Rails Engineering</a> course at <a href="http://theironyard.com/locations/raleigh-durham/" target="_blank">The Iron Yard Academy</a>. There, I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies.
                         <br>
                         <br>In addition to my web development skills, I have eight years of higher-ed IT support experience and a master's degree in history. When I'm not coding, you'll probably find me outside running, going to shows, managing my fantasy baseball rosters, or getting coffee.
+                        <br>
+                        <br>
                     </div>
                 </div>
                 <!-- Nav -->
@@ -158,7 +160,7 @@
         <!-- Footer -->
         <div id="copyright" class="container">
             <ul class="links">
-                <li>Design partially based on a template from <a href="http://html5up.net">HTML5 UP</a></li>
+                <li>Design partially based on a template from <a href="http://html5up.net">HTML5 UP</a>.</li>
             </ul>
         </div>
 	</body>
