updated surf and paddle copy

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 <h3>Surf and Paddle</h3>
                             </header>
                             <div class="justify-words">
-                                This was a one-night project early on in the course in which I built a pixel-perfect replica of a web page screen capture (no source code was provided). It was an excellent crash course in CSS that provided a useful point of reference regarding styling.
+                                This was a one-night project early on in the course in which I built a pixel-perfect replica of a web page, having only seen a screen capture. It was an excellent crash course in CSS that provided a useful point of reference regarding styling.
                             </div>
                             <br>
                             <p>
