fixed issue with resume link on navbar having different font size

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <ul>
             <li><a class="icon fa-github" href="http://www.github.com/gregburton" target="_blank"><span>GitHub</span></a></li>
             <li><a class="icon fa-linkedin" href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" target="_blank"><span>LinkedIn</span></a></li>
-            <li><a class="fa fa-file-text" href="https://dl.dropboxusercontent.com/u/2276230/GregBurtonResume.pdf" target="_blank"><span>Resume</span></a></li>
+            <li><a class="icon fa-file-text" href="https://dl.dropboxusercontent.com/u/2276230/GregBurtonResume.pdf" target="_blank"><span>Resume</span></a></li>
             <li><a class="icon fa-twitter" href="http://www.twitter.com/gregurton" target="_blank"><span>Twitter</span></a></li>
             <li><a class="icon fa-envelope" href="mailto:greg.b.burton@gmail.com" target="_blank"><span>Email</span></a></li>
           </ul>
