--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="bio-wrapper">
           <div class="face">
             <a href="#" class="image head">
-              <img src="images/greg_burton.jpg" alt="Greg Burton"/>
+              <img src="images/head-crop.jpg" alt="Greg Burton"/>
             </a>
           </div>
           <div class="bio">
