updated last-week URL

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="4u">
             <!-- Feature -->
             <section>
-              <a href="http://gregburton.github.io/last-week/" class="image featured" target="_blank"><img src="images/last_week_small.png" alt="" /></a>
+              <a href="http://gregburton.github.io/last-week-classic/" class="image featured" target="_blank"><img src="images/last_week_small.png" alt="" /></a>
               <header>
                 <h3>Last Week</h3>
               </header>
