--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               </div>
               <br>
               <p>
-                <b><a href="http://gregburton.github.io/last-week/" target="_blank">View Live</a></b>
+                <b><a href="http://gregburton.github.io/last-week-classic/" target="_blank">View Live</a></b>
                 <br>
                 <b><a href="https://github.com/gregburton/last-week" target="_blank">Source Code</a></b>
               </p>
