--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="4u">
             <!-- Feature -->
             <section>
-              <a href="http://ramblethru.com" target="_blank" class="image featured">
+              <a href="https://ramblethru.herokuapp.com/" target="_blank" class="image featured">
                 <img src="images/ramblethru_small.png" alt="Ramblethru" />
               </a>
               <header>
