--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             </a>
           </div>
           <div class="bio">
-            <strong>It all began about 15 years ago, with a junior-high foray into HTML.</strong> A hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown. Skip ahead a bit, and I decided to revisit these web development roots. After a few years in Boston, I moved to Durham, NC and enrolled in an intensive three-month <a href="http://theironyard.com/academy/rails-engineering/" target="_blank">Rails Engineering</a> course at <a href="http://theironyard.com/locations/raleigh-durham/" target="_blank">The Iron Yard Academy</a>. There, I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies.
+            <strong>It all began almost 20 years ago, with a junior-high foray into HTML.</strong> A hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown. Skip ahead a bit, and I decided to revisit these web development roots. After a few post-collegiate years in Boston, I moved to Durham, NC and enrolled in an intensive three-month Rails Engineering course at The Iron Yard Academy. There, I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies.
               <br>
-              <br>In addition to my web development skills, I have eight years of higher-ed IT support experience and a master's degree in history. When I'm not coding, you'll probably find me outside running, going to shows, managing my fantasy baseball rosters, or getting coffee.
+              <br>In addition to my web development skills, I have eight years of higher-ed IT support experience and a master's degree in history. When I'm not coding, you'll probably find me outside running, going to shows, managing my fantasy baseball rosters, or getting yet another coffee.
               <br>
               <br>
           </div>
@@ -47,9 +47,9 @@
           <ul>
             <li><a class="icon fa-github" href="http://www.github.com/gregburton" target="_blank"><span>GitHub</span></a></li>
             <li><a class="icon fa-linkedin" href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" target="_blank"><span>LinkedIn</span></a></li>
-            <li><a class="icon fa-file-text" href="https://dl.dropboxusercontent.com/u/2276230/GregBurtonResume.pdf" target="_blank"><span>Resume</span></a></li>
+            <!-- <li><a class="icon fa-file-text" href="PDF-GOES-HERE" target="_blank"><span>Resume</span></a></li> -->
             <li><a class="icon fa-twitter" href="http://www.twitter.com/gregurton" target="_blank"><span>Twitter</span></a></li>
-            <li><a class="icon fa-envelope" href="mailto:greg.b.burton@gmail.com" target="_blank"><span>Email</span></a></li>
+            <!-- <li><a class="icon fa-envelope" href="mailto:EMAIL-GOES-HERE" target="_blank"><span>Email</span></a></li> -->
           </ul>
         </nav>
       </div>
@@ -58,7 +58,7 @@
     <div id="features-wrapper">
       <section id="features" class="container">
         <header>
-          <h2>Here is a <strong>portfolio</strong> of work that I've done.</h2>
+          <h2>Here is a <strong>portfolio</strong> of work from my time in a Rails Engineering course.</h2>
         </header>
         <div class="row">
           <div class="4u">
