--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div id="features-wrapper">
       <section id="features" class="container">
         <header>
-          <h2>Here is a <strong>portfolio</strong> of work from my time in a Rails Engineering course.</h2>
+          <h2>Here is a <strong>portfolio</strong> of work from my time in a Rails course.</h2>
         </header>
         <div class="row">
           <div class="4u">
