--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             </a>
           </div>
           <div class="bio">
-            <strong>It all began almost 20 years ago, with a junior-high foray into HTML.</strong> A hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown. Skip ahead a bit, and I decided to revisit these web development roots. After a few post-collegiate years in Boston, I moved to Durham, NC and enrolled in an intensive three-month Rails Engineering course at The Iron Yard Academy. There, I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies.
+            <strong>It all began almost 20 years ago, with a junior-high foray into HTML.</strong> An after-school hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown. Skip ahead a bit, and I decided to revisit these web development roots. 
+		  				<br>After a few post-collegiate years in Boston, I moved to Durham, NC and enrolled in an intensive three-month Rails Engineering course at The Iron Yard Academy. There, I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies.
+							<br>
+							<br>I've been a full-stack web application developer at Duke University since early 2015.
               <br>
               <br>In addition to my web development skills, I have eight years of higher-ed IT support experience and a master's degree in history. When I'm not coding, you'll probably find me outside running, going to shows, managing my fantasy baseball rosters, or getting yet another coffee.
               <br>
@@ -58,7 +61,7 @@
     <div id="features-wrapper">
       <section id="features" class="container">
         <header>
-          <h2>Here is a <strong>portfolio</strong> of work from my time in a Rails course.</h2>
+          <h2>Here is a <strong>portfolio</strong> of my Rails Engineering coursework.</h2>
         </header>
         <div class="row">
           <div class="4u">
