--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <ul>
             <li><a class="icon fa-github" href="http://www.github.com/gregburton" target="_blank"><span>GitHub</span></a></li>
             <li><a class="icon fa-linkedin" href="https://www.linkedin.com/in/greg-burton-web-dev/" target="_blank"><span>LinkedIn</span></a></li>
-            <!-- <li><a class="icon fa-file-text" href="PDF-GOES-HERE" target="_blank"><span>Resume</span></a></li> -->
+            <!-- <li><a class="icon fa-file-text" href="PDF" target="_blank"><span>Resume</span></a></li> -->
             <li><a class="icon fa-twitter" href="http://www.twitter.com/gregurton" target="_blank"><span>Twitter</span></a></li>
-            <!-- <li><a class="icon fa-envelope" href="mailto:EMAIL-GOES-HERE" target="_blank"><span>Email</span></a></li> -->
+            <!-- <li><a class="icon fa-envelope" href="mailto:EMAIL" target="_blank"><span>Email</span></a></li> -->
           </ul>
         </nav>
       </div>
