--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
           </div>
           <div class="bio">
             <strong>It all began almost 20 years ago, with a junior-high foray into HTML.</strong> An after-school hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown.
-		  			<p>After a few post-collegiate years in Boston, I decided to revisit my web development roots. I moved to Durham, NC and enrolled in an intensive three-month Rails Engineering course at The Iron Yard Academy. There, I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies.</p>	
-		  			<p>I've been a full-stack web application developer at Duke University since early 2015.</p>
-            <p>In addition to my web development skills, I have eight years of higher-ed IT support experience and a master's degree in history. When I'm not coding, you'll probably find me outside running, going to shows, managing my fantasy baseball rosters, or getting yet another coffee.</p>
+						<br>
+		  			<br>After a few post-collegiate years in Boston, I decided to revisit my web development roots. I moved to Durham, NC and enrolled in an intensive three-month Rails Engineering course. I've been a full-stack web application developer at Duke University since early 2015.
+						<br>
+            <br>In addition to my web development skills, I have eight years of higher-ed IT support experience and a master's degree in history. When I'm not coding, you'll probably find me outside running, going to shows, managing my fantasy baseball rosters, or getting yet another coffee.
             <br>
           </div>
         </div>
