Fixed or removed outdated hyperlinks.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.dropotron.min.js"></script>
 		<script src="js/skel.min.js"></script>
@@ -17,7 +16,6 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body class="homepage">
     <!-- Header -->
@@ -35,7 +33,7 @@
             </a>
           </div>
           <div class="bio">
-            <strong>It all began about 15 years ago, with a junior-high foray into HTML.</strong> A hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown. Skip ahead a bit, and I decided to revisit these web development roots. After a few years in Boston, I moved to Durham, NC and enrolled in an intensive three-month <a href="http://theironyard.com/academy/rails-engineering/" target="_blank">Rails Engineering</a> course at <a href="http://theironyard.com/locations/raleigh-durham/" target="_blank">The Iron Yard Academy</a>. There, I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies.
+            <strong>It all began about 15 years ago, with a junior-high foray into HTML.</strong> A hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown. Skip ahead a bit, and I decided to revisit these web development roots. After a few years in Boston, I moved to Durham, NC and enrolled in an intensive three-month Rails Engineering course at The Iron Yard Academy. There, I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies.
               <br>
               <br>In addition to my web development skills, I have eight years of higher-ed IT support experience and a master's degree in history. When I'm not coding, you'll probably find me outside running, going to shows, managing my fantasy baseball rosters, or getting coffee.
               <br>
@@ -47,9 +45,7 @@
           <ul>
             <li><a class="icon fa-github" href="http://www.github.com/gregburton" target="_blank"><span>GitHub</span></a></li>
             <li><a class="icon fa-linkedin" href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" target="_blank"><span>LinkedIn</span></a></li>
-            <li><a class="icon fa-file-text" href="https://dl.dropboxusercontent.com/u/2276230/GregBurtonResume.pdf" target="_blank"><span>Resume</span></a></li>
             <li><a class="icon fa-twitter" href="http://www.twitter.com/gregurton" target="_blank"><span>Twitter</span></a></li>
-            <li><a class="icon fa-envelope" href="mailto:greg.b.burton@gmail.com" target="_blank"><span>Email</span></a></li>
           </ul>
         </nav>
       </div>
@@ -64,7 +60,7 @@
           <div class="4u">
             <!-- Feature -->
             <section>
-              <a href="http://ramblethru.com" target="_blank" class="image featured">
+              <a href="https://ramblethru.herokuapp.com/" target="_blank" class="image featured">
                 <img src="images/ramblethru_small.png" alt="Ramblethru" />
               </a>
               <header>
@@ -76,7 +72,7 @@
               <br>
               <p>
                 <b><a href="http://vimeo.com/114915914" target="_blank">Video of Demo Day presentation</a></b><br>
-                <b><a href="http://ramblethru.com" target="_blank">View Live</a></b><br>
+                <b><a href="https://ramblethru.herokuapp.com/" target="_blank">View Live</a></b><br>
                 <b><a href="https://github.com/Ramblethru/Ramblethru" target="_blank">Source Code</a></b>
               </p>
             </section>
@@ -95,7 +91,7 @@
               <p>
                 <b><a href="http://gregburton.github.io/last-week-classic/" target="_blank">View Live</a></b>
                 <br>
-                <b><a href="https://github.com/gregburton/last-week" target="_blank">Source Code</a></b>
+                <b><a href="https://github.com/gregburton/last-week-classic" target="_blank">Source Code</a></b>
               </p>
             </section>
           </div>
@@ -129,7 +125,7 @@
                 <h3>TodoMVC</h3>
               </header>
               <div class="justify-words">
-                  For this assignment, I had one night to do extensive research on how to use using ActiveModelSerializers to create JSON output. Once that was done, I then had to build out a controller to interact with a Backbone-powered version of the TodoMVC app.
+                For this assignment, I had one night to do extensive research on how to use using ActiveModelSerializers to create JSON output. Once that was done, I then had to build out a controller to interact with a Backbone-powered version of the TodoMVC app.
               </div>
               <br>
               <p>
@@ -146,7 +142,7 @@
                 <h3>Surf and Paddle</h3>
               </header>
               <div class="justify-words">
-                  This was a one-night project early on in the course in which I built a pixel-perfect replica of a web page, having only seen a screen capture. It was an excellent crash course in CSS that provided a useful point of reference regarding styling.
+                This was a one-night project early on in the course in which I built a pixel-perfect replica of a web page, having only seen a screen capture. It was an excellent crash course in CSS that provided a useful point of reference regarding styling.
               </div>
               <br>
               <p>
@@ -166,8 +162,3 @@
     </div>
   </body>
 </html>
-<!--
-Strongly Typed by HTML5 UP
-html5up.net | @n33co
-Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
