Updated Scholars@Duke portion of page.

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
               <header>
                 <h3>scholars@duke (2015 - 2019)</h3>
                 <p style="margin-top:-15px;">
-                  <b><a href="https://ramblethru.herokuapp.com/" target="_blank">View Live</a></b>
+                  <b><a href="https://scholars.duke.edu" target="_blank">View Live</a></b>
                    / 
                   <b><a href="https://github.com/OIT-ADS-Web/vivo" target="_blank">Source Code</a></b>
                 </p>
               </header>
               <div class="justify-words" style="margin-bottom:30px;">
-                *TEXT GOES HERE*
+                The majority of my time at Duke was devoted to the university's implementation of <a href="https://duraspace.org/vivo/">VIVO</a>. This involved the import and munging of data from disparate sources, then converting it to RDF format and saving the RDF to a triplestore. This information was then SPARQL'd out for display on the front end (see GitHub link above). I did extensive work on the profile page manager (Rails) and data ingest (Kotlin) applications as well--however this code is not publically available.
               </div>
             </section>
           </div>
